--- a/ToDoApp/angular.json
+++ b/ToDoApp/angular.json
@@ -25,7 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "E:/My_First_App/ToDoApp/node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
