--- a/ToDoApp/package.json
+++ b/ToDoApp/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
+    "@angular/animations": "^16.2.12",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@swimlane/ngx-charts": "^20.5.0",
+    "angular-notifier": "^14.0.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "ngx-colors": "^3.5.3",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
